# simple-bot

./: .dockerignore  .gitignore  LICENSE  README.md  bot.py  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
src/plugins/nonebot-plugin-qqshell/: __init__.py  config.py  handler.py  services.py
src/plugins/nonebot-plugin-qqshell/shell/: feak_shell.py  shell.py  ssh_shell.py
src/plugins/nonebot-plugin-qqshell/templates/: xterm.html
